fix layout issue on mobile

--- a/styles/about.css
+++ b/styles/about.css
@@ -77,7 +77,7 @@
   text-align: center;
 }
 
-@media (min-width: 340px) and (max-width: 1280px) {
+@media (max-width: 1280px) {
   
   .about-container {
     display: flex;
