--- a/styles/projects.css
+++ b/styles/projects.css
@@ -64,7 +64,7 @@
   border: 2px solid var( --accent-color);
 }
 
-@media (min-width: 340px) and (max-width: 1280px) {
+@media (max-width: 1280px) {
 
   .projects-card-container {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -77,6 +77,5 @@
   .project-image {
     height: 90%;
     width: 90%;
-    place-self: center;
   }
 }
