--- a/styles/skills.css
+++ b/styles/skills.css
@@ -30,7 +30,7 @@
   font-size: 1.2rem;
 }
 
-@media (min-width: 340px) and (max-width: 1280px) {
+@media (max-width: 1280px) {
   .skills-card-container {
   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
   }
